--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -35,7 +35,7 @@ script_location = migrations
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/online-exam
 
 
 # Logging configuration
